--- a/src/component/Header/header.css
+++ b/src/component/Header/header.css
@@ -4,3 +4,25 @@
   z-index: 1000; /* Ensure it stays above other content */
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Optional: add a shadow for better visibility */
 }
+
+.underline-anim{
+  color: white;
+  position:relative;
+}
+
+.underline-anim::after{
+  content: '';
+  height:2px;
+  width: 100%;
+  background-color: white;
+  position:absolute;
+  left:0;
+  bottom:0;
+  width:0;
+  transition: width 0.3s ease;
+}
+
+.underline-anim:hover::after{
+  width:100%;
+}
+
